public/assets/css/style.css
/* ... */
.wsus__chat_area_footer .footer_message .img img {
    border-radius: 5px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    -ms-border-radius: 5px;
    -o-border-radius: 5px;
}

.wsus__chat_area_footer form {
    width: 100%;
    background: var(--colorWhite);
    padding-left: 110px;
    border-radius: 50px;
    display: flex;
    flex-flow: wrap;
    align-items: center;
    position: relative;
}


.wsus__chat_area_footer form .file {
    position: absolute;
    left: 10px;
    top: 8px;
}

.wsus__chat_area_footer form .file label {
    cursor: pointer;
    width: 35px;
    height: 35px;
    background: var(--colorPrimary);
    color: var(--colorWhite);
    line-height: 35px;
    text-align: center;
    border-radius: 50%;
    cursor: pointer;
    transition: all linear .3s;
    -webkit-transition: all linear .3s;
    -moz-transition: all linear .3s;
    -ms-transition: all linear .3s;
    -o-transition: all linear .3s;
}

.wsus__chat_area_footer form .file label:hover {
    background: var(--colorBlack);
    color: var(--colorLightBg);
}

.wsus__chat_area_footer form textarea {
    width: 100%;
    border: none;
    border-radius: 50px;
    border-left: 1px solid #E4E7E9;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    padding: 15px 20px;
}

.wsus__chat_area_footer form button {
    position: absolute;
    top: 6px;
    right: 6px;
    width: 40px;
    height: 40px;
    line-height: 40px;
    background: var(--colorLightBg);
    color: var(--colorPrimary);
    border-radius: 50%;
    transition: all linear .3s;
    -webkit-transition: all linear .3s;
    -moz-transition: all linear .3s;
    -ms-transition: all linear .3s;
    -o-transition: all linear .3s;
}

.wsus__chat_area_footer form button:hover {
    background: var(--colorPrimary);
    color: var(--colorLightBg);
}

.wsus__chat_info {
    width: 20%;
    height: 100%;
    background: var(--colorWhite);
}

.wsus__chat_info_header {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
    border-bottom: 1px solid #e8e8e8;
}

.wsus__chat_info_header h5 {
    font-size: 16px;
    font-weight: 700;
}

.wsus__chat_info_header span {
    display: block;
    width: 30px;
    height: 30px;
    background: var(--colorLightBg);
    line-height: 30px;
    text-align: center;
    color: red;
    cursor: pointer;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    transition: all linear .3s;
    -webkit-transition: all linear .3s;
    -moz-transition: all linear .3s;
    -ms-transition: all linear .3s;
    -o-transition: all linear .3s;
}

.wsus__chat_info_header span:hover {
    background: red;
    color: var(--colorWhite);
}

.wsus__chat_info_details {
    text-align: center;
}

.wsus__chat_info_details .user_photo {
    width: 90px;
    height: 90px;
    border-radius: 50%;
    overflow: hidden;
    margin: 0 auto;
    margin-top: 50px;
    margin-bottom: 15px;
}

.wsus__chat_info_details .user_name {
    font-size: 18px;
    font-weight: 700;
    text-transform: capitalize;
    margin-bottom: 10px;
}

.wsus__chat_info_details .delete_chat {
    color: red;
}

.wsus__chat_info_details .photo_gallery {
    position: relative;
    text-align: center;
    font-size: 14px;
    font-weight: 400;
    text-transform: capitalize;
    color: var(--paraColor);
    margin: 40px 0px 15px 0px;
}

.wsus__chat_info_details .photo_gallery::before,
.wsus__chat_info_details .photo_gallery::after {
    position: absolute;
    content: "";
    width: 35%;
    height: 1px;
    background: #e8e8e8;
    top: 10px;
    left: 0;
}

.wsus__chat_info_details .photo_gallery::after {
    left: auto;
    right: 0;
}

.wsus__chat_info_details .nothing_share {
    display: inline-block;
    background: var(--colorLightBg);
    padding: 5px 20px;
    border-radius: 50px;
}

.wsus__chat_info_gallery {
    display: flex;
    flex-wrap: wrap;
    gap: 6px;
    padding: 20px 6px;
    height: 500px;
    overflow-y: scroll;
}

.wsus__chat_info_gallery li {
    width: 32%;
}

.wsus__chat_info_gallery li .venobox {
    display: block;
    width: 100%;
    height: 70px;
    overflow: hidden;
}

.wsus__chat_app.show_info .wsus__chat_area {
    width: 75%;
}

.wsus__chat_app.show_info .wsus__chat_info {
    display: none;
}

.favourite_user_slider {
    /* margin: 0; */
}

.nextArrow,
.prevArrow {
    position: absolute;
    top: 26px;
    right: 20px;
    width: 30px;
    height: 30px;
    background: var(--colorLightBg);
    line-height: 32px !important;
    color: var(--colorPrimary);
    border-radius: 50px;
    cursor: pointer;
    transition: all linear .3s;
    -webkit-transition: all linear .3s;
    -moz-transition: all linear .3s;
    -ms-transition: all linear .3s;
    -o-transition: all linear .3s;
}

.prevArrow {
    right: auto;
    left: 20px;
}

.nextArrow:hover,
.prevArrow:hover {
    background: var(--colorPrimary);
    color: var(--colorWhite);
}


.wsus__user_list_liading {
    background: var(--colorLightBg);
    text-align: center;
    padding: 5px;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
}

.wsus__user_list_liading .spinner-border {
    width: 20px;
    height: 20px;
    color: var(--colorPrimary) !important;
}

.spinner-border {
    --bs-spinner-border-width: 2px;
}

.wsus__single_chat .time,
.wsus__single_chat .clock {
    display: block;
    font-size: 14px;
    color: var(--paraColor);
    font-weight: 400;
    position: absolute;
    bottom: -20px;
    left: 0;
    text-align: left;
}

.wsus__single_chat.chat_right .time,
.wsus__single_chat.chat_right .clock {
    text-align: right;
    left: auto;
    right: 0;
}

.wsus__single_chat.chat_right .clock i {
    font-size: 11px;
}


/** Custom Css*/

.img-fluid.profile-image-preview {
    height: 135px !important;
    width: 135px !important;
    object-fit: cover !important;
}
/* ... */

